feat: add findComicsByGenre